fix overflow in components

--- a/src/less/_components.less
+++ b/src/less/_components.less
@@ -4,7 +4,7 @@
     position: relative;
     margin-bottom: 30px;
     text-align: right;
-    overflow: auto;
+    overflow: hidden;
     
     .bounding-box {
         padding-top: (@bounding-box-icon-size - @icon-size) / 2 - 2px;
@@ -14,7 +14,7 @@
         text-align: center;
         border-radius: 50%;
         background-repeat: no-repeat;
-        overflow: auto;
+        overflow: hidden;
         
         i {
             font-size: @icon-size;
